# learn-rust

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  axum.http  index.html  notification.puml  rust-toolchain.toml
basic/: Cargo.toml
basic/src/: arrays.rs  conditional.rs  constant.rs  function.rs  main.rs  print.rs  slices.rs  strings.rs  tuples.rs  types.rs  variable.rs  vectors.rs
notification/: Cargo.toml
notification/src/: error.rs  lib.rs  model.rs  port.rs  usecase.rs
notification/src/model/: error.rs  mod.rs  notification.rs
notification/src/port/: database.rs  mod.rs  usecase.rs
notification/src/usecase/: notification.rs
repo_native/: Cargo.toml
repo_native/src/: mysql.rs
repo_sqlx/: Cargo.toml
repo_sqlx/src/: lib.rs  mysql.rs  postgres.rs
rest_actix_web/: Cargo.toml
rest_actix_web/src/: app.rs  controller.rs  lib.rs  main.rs  state.rs
rest_actix_web/src/controller/: mod.rs  root.rs  todo.rs
rest_actix_web/src/model/: api.rs  mod.rs
rest_actix_web/src/service/: todo.rs
rest_actix_web/tests/: controller.rs  root.rs
rest_actix_web/tests/common/: mod.rs
rest_axum/: Cargo.toml
rest_axum/src/: app.rs  main.rs
rest_axum/src/controller/: root.rs
src/: arrays.rs  function.rs  lib.rs  looping.rs  main.rs  slices.rs
src/axum/: controller.rs  error.rs  middleware.rs  mod.rs  model.rs
src/basic/: arrays.rs  conditional.rs  function.rs  looping.rs  mod.rs  tuples.rs  types.rs  variable.rs
src/clap/: mod.rs
