[package]
name = "learn-rust"
version = "0.1.0"
authors = ["shandysiswandi <shandysiswandi@gmail.com>"]
edition = "2021"

[dependencies]
axum = "0.6.7"
axum-extra = "0.5.0"
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
validator = { version = "0.15", features = ["derive"] }
