[package]
name = "repo_sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
notification = { path = "../notification" }
sqlx = { version = "0.6.2", features = [ "postgres" , "mysql" ] }
