[package]
name = "rest_actix_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
anyhow = "1.0.68"
dotenv = "0.15.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "mysql" ] }
