[package]
name = "rest_actix_web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rest_actix_web"
path = "src/main.rs"

[lib]
name = "rest_actix_web"
path = "src/lib.rs"

[dependencies]
notification = { path = "../notification" }
repo_sqlx = { path = "../repo_sqlx" }
actix-web = "4.3.0"
anyhow = "1.0.68"
async-trait = "0.1.64"
dotenv = "0.15.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "mysql" ] }

[dev-dependencies]
actix-rt = "2.8.0"
reqwest = "0.11.14"
tokio = "1.25.0"
